@@ -153,7 +153,7 @@
 #define STDC_HEADERS 1
 
 /* Most recent revision number in the version control system */
-#define VCS_REVISION "210"
+#define VCS_REVISION "212"
 
 /* Version number of package */
 #define VERSION "2.10"
