@@ -1,3 +1,7 @@
+2010-08-06  Markus Gutschke  <markus@shellinabox.com>
+
+	* Allow users to disable the blinking cursor from the context menu.
+
 2010-07-08  Markus Gutschke  <markus@shellinabox.com>
 
 	* Added support for systems that have utmpx.h, but don't implement
